# MoneyA-Solana-Program

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
backend/: .env.example  package-lock.json  package.json
backend/src/: server.ts
backend/src/db/: init.ts  schema.ts
backend/src/fraud/: engine.ts
backend/src/observe/: surfpool.ts
backend/src/routes/: kotani.ts
backend/src/solana/: client.ts
backend/src/types/: global.d.ts
programs/franco_student_pay/: Cargo.toml
programs/franco_student_pay/src/: lib.rs
scripts/: devnet_usdc_mint.ts  simulate_txs.ts  treasury_setup.ts
