[package]
name = "franco_student_pay"
version = "0.1.0"
description = "Franco Student Pay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "franco_student_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
